src/test/deca/codegen/invalid/loops/while-sans-bool.deca
// Description:
//    Condition non booléenne dans une boucle while
//
// Résultats:
//    Erreur de compilation: condition non booléenne

{
   int a;
   a = 5;
   while (a) { 
      println(a);
      a = a - 1;
   }
}